# OpsAssist-AI

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  ingestion.py  main.py  rag_pipeline.py  retriever.py  schemas.py
data/docs/: api_gateway_502_runbook.md  auth_service_latency.md  escalation_policy.md  release_v2_3_1.md  scheduler_failure_runbook.md
data/eval_sets/: retrieval_eval.jsonl
frontend/: streamlit_app.py
scripts/: ingest_docs.py  run_eval.py  test_retriever.py
tests/: test_health.py  test_retrieve_docs.py
